--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Verifier</title>
+    <script>
+        var popup;
+        function loginwindow(){
+            
+            popup = window.open("http://127.0.0.1:8000/user/login",'login',"width=550,height=200");
+
+            // When the popup has fully loaded, if not blocked by a popup blocker:
+
+            // This does nothing, assuming the window hasn't changed its location.
+            popup.postMessage("The user is 'bob' and the password is 'secret'",
+                            "http://127.0.0.1:8000");
+
+            // This will successfully queue a message to be sent to the popup, assuming
+            // the window hasn't changed its location.
+            popup.postMessage("hello there!", "http://127.0.0.1:8000");
+
+            window.addEventListener("message", (event) => {
+            // Do we trust the sender of this message?  (might be
+            // different from what we originally opened, for example).
+            if (event.origin !== "http://example.com")
+                return;
+            console.log(event.data);
+            console.log(event.origin);
+            console.log(event.source);
+            // event.source is popup
+            // event.data is "hi there yourself!  the secret response is: rheeeeet!"
+            }, false);
+        }
+    </script>
 </head>
 <body>
-    BAL
+    <h1>Verifier Application</h1>
+    <input type=text id="username" placeholder="username">
+    <button onclick="loginwindow()" value="login with aadhar">Login</button>
 </body>
 </html>
