--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -7,51 +7,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verifier</title>
-    <button onclick="openNewTab()">OPEN NEW TAB</button>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
     <script src="{% static 'js/across-tabs.js'%}"></script>
-    <!--<script>
-        var SSO_DOMAIN="http://127.0.0.1:8000";
-        var SSO_URL="http://127.0.0.1:8000/sso";
-        var POPUP_SPECS="width=350,height=500";
-        var POPUP_NAME={
-            1:'_blank',// URL is loaded into a new window, or tab. This is default
-            2:'_parent',// - URL is loaded into the parent frame
-            3:'_self',// - URL replaces the current page
-            4:'_top',// - URL replaces any framesets that may be loaded
-            5:'login',// - The name of the window (Note: the name does not specify the title of the new window)
-        }
-        var callback=null;
-        function aadhaarInit(divname="aadhaar",apikey="",callbackfn=null){
-            callback=callbackfn;
-            // Check API-Key from Server
-            var aadhaar = document.getElementById(divname);
-            btn = document.createElement("button");
-            btn.innerHTML = "Aadhaar Login";
-            btn.onclick = function(){
-                loginWindow();
-            }
-            aadhaar.appendChild(btn);
-            return aadharWorkerFunction;
-        }
-        var aadharWorkerFunction = function(data){
-            // function verifier site can use to get data from aadhaar sso
-            console.log("aadharWorkerFunction",data);
-        }
-    </script>-->
 </head>
 
 <body>
-    <h1>Verifier Application</h1>
+	<nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #ffffff;">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="{%url 'index'%}">
+				<img src="{%static 'images/icon.png'%}" width="30" height="30" class="d-inline-block align-top" alt="">
+				Verifier Application
+			</a>
+		</div>
+	</nav>
+    <br>
+    
+<style>
+.simple-login-container{
+    width:400px;
+    max-width:100%;
+    margin:50px auto;
+}
+.simple-login-container h2{
+    text-align:center;
+    font-size:20px;
+    margin-bottom: 20px;
+}
+.simple-login-container .row{
+    margin-bottom:20px;
+}
+.simple-login-container .btn-login{
+    background-color:#17a2f2;
+    color:#fff;
+    width:100%;
+}
+a{
+    color:#fff;
+}
+
+</style>
+<div class="simple-login-container">
+    <h2>Login Form</h2>
+    <div class="row">
+        <div class="col-md-12 form-group">
+            <input type="text" class="form-control" placeholder="Email / Phone Number">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 form-group">
+            <input type="password" placeholder="Password" class="form-control">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 form-group">
+            <input type="submit" class="btn btn-block btn-login" value="Submit">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 d-flex justify-content-center">
+            <div id="aadhaar"></div>
+        </div>
+    </div>
+</div>
+
+
+
     <div id="data"></div>
-    <div id="aadhaar"></div>
     <p>PMLIST</p>
     <div id='pm-list' style="display:inline-block;"></div>
     <script>
-
-        var SSO_DOMAIN = "http://127.0.0.1:8000";
-        var SSO_URL = "http://127.0.0.1:8000/sso";
+        var DEBUG = true;
+        var SSO_DOMAIN = "http://127.0.0.1:8000/";
+        var SSO_URL = "http://127.0.0.1:8000/sso/";
         var POPUP_SPECS = "width=350,height=500";
         var newTab,
             i = 0;
@@ -59,7 +95,25 @@
             allTabs = [],
             openedTabs = [],
             closedTabs = [];
-
+        function log(...args) {
+            if(DEBUG)console.log(args);
+        }
+        function showPMList() {
+            if(!DEBUG) return 0;
+            var list = '';
+            for (var i = 0; i < postMessageEvents.length; i++) {
+                var msg;
+                if (postMessageEvents[i].type === 'custom') {
+                    msg = 'Tab: <strong>' + postMessageEvents[i].id + '</strong> sent: ' + JSON.stringify(postMessageEvents[i].msg);
+                } else if (postMessageEvents[i].type === 'open') {
+                    msg = 'Tab: <strong>' + postMessageEvents[i].id + '</strong> opened';
+                } else if (postMessageEvents[i].type === 'close') {
+                    msg = 'Tab: <strong>' + postMessageEvents[i].id + '</strong> closed';
+                }
+                list += '<li>' + '<span>' + msg + '</span>' + '</li>';
+            }
+            document.getElementById('pm-list').innerHTML = list;
+        }
         function openNewTab(permissions = []) {
             var config = {
                 url: SSO_URL,
@@ -80,22 +134,6 @@
         function broadCastAll(data = 'Yo! Broadcasted Message from parent to ALL!') {
             parent.broadCastAll(data);
         }
-        function showPMList() {
-            var list = '';
-            for (var i = 0; i < postMessageEvents.length; i++) {
-                var msg;
-                if (postMessageEvents[i].type === 'custom') {
-                    msg = 'Tab: <strong>' + postMessageEvents[i].id + '</strong> sent: ' + JSON.stringify(postMessageEvents[i].msg);
-                } else if (postMessageEvents[i].type === 'open') {
-                    msg = 'Tab: <strong>' + postMessageEvents[i].id + '</strong> opened';
-                } else if (postMessageEvents[i].type === 'close') {
-                    msg = 'Tab: <strong>' + postMessageEvents[i].id + '</strong> closed';
-                }
-                list += '<li>' + '<span>' + msg + '</span>' + '</li>';
-            }
-
-            document.getElementById('pm-list').innerHTML = list;
-        }
         function onChildDisconnect(data) {
             data.type = 'close';
             postMessageEvents.push(data);
@@ -106,16 +144,27 @@
             postMessageEvents.push(data);
             showPMList();
         }
+        var permission_request = false;
         function onChildCommunication(data) {
-            console.log('onChildCommunication', JSON.stringify(data));
+            log('onChildCommunication', data.msg);
+            msg=data.msg;
+            if(msg.head=="sendPermissions"){
+                if(AADHAR_INIT){
+                    broadCastAll(AADHAR_INIT['permissions']);
+                }
+                else{
+                    permission_request = true;
+                }
+            }
+            else if(msg.head=="data"){
+                document.getElementById("data").innerHTML = JSON.stringify(msg.body);
+            }
             data.type = 'custom';
             postMessageEvents.push(data);
             showPMList();
         }
         function onPollingCallback() {
-            allTabs = parent.getAllTabs();
-            openedTabs = parent.getOpenedTabs();
-            closedTabs = parent.getClosedTabs();
+            // log('onPollingCallback');
         }
         var parent = new AcrossTabs.default.Parent({
             onHandshakeCallback: onHandshakeCallback,
@@ -125,7 +174,6 @@
         });
     </script>
     <script>
-        var DEBUG = true;
         var DATA = {
             'vid': '',
             'personal_data': {
@@ -148,12 +196,12 @@
             },
             'photo': '',
         };
-        var AADHAR_INIT = {};
+        var AADHAR_INIT = null;
         aadhaarInit = function (
             apikey = "",
             divname = "aadhaar",
             permissions = ['vid', 'personal_data', 'address', 'photo'],
-            callbackfn = null) {
+            BTN_CLASS = "btn btn-warning") {
             INIT_REQ = {
                 'divname': divname,
                 'apikey': apikey,
@@ -162,9 +210,9 @@
             }
             // check API-Key, window.location.href and permissions access from SSO Server registration.
             // if all is ok then create AADHAR BUTTON
-            console.log("AADHAR_INIT", JSON.stringify(INIT_REQ));
+            log("AADHAR_INIT", JSON.stringify(INIT_REQ));
             $.ajax({
-                url: SSO_DOMAIN + "/user/api/check_permission/",
+                url: SSO_DOMAIN + "user/api/check_permission/",
                 type: "POST",
                 data: INIT_REQ,
                 success: function (data) {
@@ -173,11 +221,13 @@
                         return 0;
                     }
                     else {
-                        console.log("AADHAR_INIT SUCCESS", data);
+                        log("AADHAR_INIT SUCCESS", data);
                         permissions = data['permissions']
                         var aadhaar = document.getElementById(divname);
                         btn = document.createElement("button");
-                        btn.innerHTML = "Aadhaar Login";
+                        btn.setAttribute("id", "aadhaar-btn");
+                        btn.setAttribute("class",BTN_CLASS);
+                        btn.innerHTML = "Login with Aadhaar";
                         btn.onclick = function () {
                             openNewTab();
                         }
@@ -185,42 +235,38 @@
                         AADHAR_INIT = {
                             'divname': divname,
                             'apikey': apikey,
-                            'callbackfn': callbackfn,
                             'permissions': permissions,
                             'origin': window.location.href,
                         }
-                        permissionsobj = {
-                            "head": "permissions",
-                            "body": permissions,
+                        if(permission_request){
+                            broadCastAll({head:"permissions","body":AADHAR_INIT['permissions']});
                         }
                     }
                 },
                 error: function (data) {
-                    console.log("AADHAR_INIT FAIL", data);
+                    log("AADHAR_INIT FAIL", data);
                 }
             });
             // RETURN WORKERS TO CALL
             var aadharWorkerFunction = {
                 'getChild': function (data) {
                     if (!DEBUG) return 0;// NOT FOR PRODUCTION
-                    console.log("aadharWorkerFunction - getChild", data);
+                    log("aadharWorkerFunction - getChild", data);
                 },
                 'getData': function (permissions = permissions) {
-                    console.log("aadharWorkerFunction - getData", permissions);
+                    log("aadharWorkerFunction - getData", permissions);
                 }
             }
             return aadharWorkerFunction;
         }
     </script>
     <script defer>
-        callbackfn = (data) => console.log("callbackfn", data);
         aadharWorker = aadhaarInit(
             apikey = "hbc-podoih-0019kx",
             divname = "aadhaar",
             permissions = ['vid', 'personal_data', 'address', 'photo'],
-            callbackfn = callbackfn
         );
-        // var aadharBtn = aadhaarInit("app-key","aadhaar", ["vid", "personal_data", "address", "photo"],callbackfn);
+        // var aadharBtn = aadhaarInit("app-key","aadhaar", ["vid", "personal_data", "address", "photo"]);
     </script>
 </body>
 
