--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -50,8 +50,8 @@
     <div id='pm-list' style="display:inline-block;"></div>
     <script>
 
-        var SSO_DOMAIN = "http://127.0.0.1:8000";
-        var SSO_URL = "http://127.0.0.1:8000/sso";
+        var SSO_DOMAIN = "https://b78e-115-187-36-114.ngrok.io";
+        var SSO_URL = "https://b78e-115-187-36-114.ngrok.io/sso";
         var POPUP_SPECS = "width=350,height=500";
         var newTab,
             i = 0;
