--- a/verifier/authentication/templates/generate_qr.html
+++ b/verifier/authentication/templates/generate_qr.html
@@ -325,23 +325,22 @@
     </style>
 </head>
 
-<body style="background-color: #fddf94;">
+<body style="background-color: #97d7ff;">
     <div class="wrapper fadeInDown">
         <div id="formContent">
             <div class="fadeIn first mt-4 mb-2">
-                <img src="{%static 'images/logo.svg'%}" id="icon" alt="User Icon"
+                <img src="{%static 'images/icon.png'%}" id="icon" alt="User Icon"
                     style="max-height: 15%;max-width: 15%;" />
             </div>
             <div class="fadeIn first mb-2">
                 <h2>Send E-KYC</h2>
             </div>
-            <div id="qrcode" class="d-flex justify-content-center"></div>
-            <div id="formFooter">
+            <div id="qrcode" class="d-flex justify-content-center" style="padding-bottom: 40pt;"></div>
+            <!-- <div id="formFooter">
                 {%block footer%}
                 <a class="underlineHover">Register</a>
                 {%endblock%}
-            </div>
-
+            </div> -->
         </div>
     </div>
     {%block script%}
