--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -90,7 +90,7 @@
     <script>
 
         var SSO_DOMAIN = "https://b78e-115-187-36-114.ngrok.io/";
-        var SSO_URL = "https://b78e-115-187-36-114.ngrok.io/sso/";
+        var SSO_URL = SSO_DOMAIN+"/sso/";
         var DEBUG = true;
         var POPUP_SPECS = "width=350,height=500";
         var newTab,
