--- a/verifier/authentication/templates/generate_qr.html
+++ b/verifier/authentication/templates/generate_qr.html
@@ -349,11 +349,11 @@
 
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <script type="text/javascript">
-        var API_KEY = "hbc-podoih-0019kx";
+        var API_KEY = "d058ce12-badd-448d-9727-81abab136e99";
         // data = {
         //     "apiKey": API_KEY,
         // }
-        var SSO_DOMAIN = "https://127.0.0.1:8000/";
+        var SSO_DOMAIN = '{{apikey}}';
         var QR_URL = SSO_DOMAIN+"sso/scan_qr/";
         var data = QR_URL+"?ApiKey="+API_KEY;
         var DEBUG = true;
