--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -266,7 +266,7 @@
     </script>
     <script defer>
         aadharWorker = aadhaarInit(
-            apikey = "hbc-podoih-0019kx",
+            apikey = "{{apikey}}",
             divname = "aadhaar",
             permissions = ['vid', 'personal_data', 'address', 'photo'],
         );
