--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -90,7 +90,7 @@
     <script>
 
         var SSO_DOMAIN = "http://143.110.248.104:8000/";
-        var SSO_URL = SSO_DOMAIN+"/sso/";
+        var SSO_URL = SSO_DOMAIN+"sso/";
         var DEBUG = true;
         var POPUP_SPECS = "width=350,height=500";
         var newTab,
