--- a/verifier/authentication/templates/index.html
+++ b/verifier/authentication/templates/index.html
@@ -58,7 +58,7 @@
             color: #fff;
         }
     </style>
-    <div class="simple-login-container">
+    <div class="simple-login-container" id="datacontainer">
         <h2>Login Form</h2>
         <div class="row">
             <div class="col-md-12 form-group">
@@ -148,6 +148,40 @@
             postMessageEvents.push(data);
             showPMList();
         }
+        function logout(){
+            localStorage.removeItem('data');
+        }
+        function showlogin(){
+            data = JSON.parse(localStorage.getItem('data')); 
+            dataparse = `<h2>Logged In<h2><button class="btn btn-danger" onclick="logout()">Logout</button>`
+            try{
+                if(data["personal_data"])
+                dataparse+=`
+                    <p> ${data["personal_data"]["dob"]} </p>
+                    <p> ${data["personal_data"]["gender"]} </p>
+                    <p> ${data["personal_data"]["name"]} </p>
+                    <p> ${data["personal_data"]["phone"]} </p>`
+                if(data["address"]){
+                    dataparse+=`
+                    <p> ${data["address"]["co"]} </p>
+                    <p> ${data["address"]["country"]} </p>
+                    <p> ${data["address"]["dist"]} </p>
+                    <p> ${data["address"]["house"]} </p>
+                    <p> ${data["address"]["lm"]} </p>
+                    <p> ${data["address"]["pc"]} </p>
+                    <p> ${data["address"]["state"]} </p>
+                    <p> ${data["address"]["street"]} </p>
+                    <p> ${data["address"]["vtc"]} </p>`                
+                }
+                if(data["photo"]){
+                    dataparse+=`
+                    <img src="data:image/jpg;base64,${data["photo"]}">`
+                }
+            }catch{
+            }
+            
+            document.getElementById('datacontainer').innerHTML =dataparse
+        }
         var permission_request = false;
         function onChildCommunication(data) {
             log('onChildCommunication', data.msg);
@@ -162,6 +196,8 @@
             }
             else if (msg.head == "data") {
                 document.getElementById("data").innerHTML = JSON.stringify(msg.body);
+                localStorage.setItem("data", JSON.stringify(msg.body));
+                showlogin();
             }
             data.type = 'custom';
             postMessageEvents.push(data);
